ToDoApp/Manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todoapp-svc
spec: 
  type: ClusterIP
  selector:
    app: todoapp
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
